--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Specific folders
+# Specific files and folders
 tokenizer/
 model/
+.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
