--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Specific files and folders
+checkpoints/
 tokenizer/
+model/
+predictions/
+data/squad_br
+data/squad_br_v2
+data/squad_en_original
+data/squad_experiments
 .DS_Store
 
 # Byte-compiled / optimized / DLL files
