--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Specific files and folders
+checkpoints/
 tokenizer/
 model/
+predictions/
 data/squad_br
 data/squad_br_v2
 data/squad_en_original
